# ogl-shadow

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  README.md  camera.cpp  camera.h  cube.cpp  cube.h  depth_map.cpp  depth_map.h  glad.c  light.h  main.cpp  model.cpp  model.h  quad.h  shader.cpp  shader.h  texture.cpp  texture.h
include/glad/: glad.h
mesh/: cube.h  model.cpp  model.h  quad.cpp
texture/: texture.cpp  texture.h
